<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="male_img">male_img</string>
    <string name="female_img">female_img</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height</string>
    <string name="input_height_number">150</string>
    <string name="centimeters">cm</string>
    <string name="weight">Weight</string>
    <string name="weight_number">75</string>
    <string name="age">Age</string>
    <string name="age_number">30</string>
    <string name="calculate">Calculate</string>
    <string name="your_result">Your Result</string>
    <string name="normal">Normal</string>
    <string name="bmi_index">19.2</string>
    <string name="bmi_explanation">You Have a Normal Body Weight, Good Job.</string>
    <string name="re_calculate">Re-Calculate</string>
    <string name="title_activity_result_screen">ResultScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_main2">MainActivity2</string>
</resources>