<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/male_card"
        android:layout_width="155dp"
        android:layout_height="180dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="184dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="15dp"
        app:cardBackgroundColor="@color/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:src="@drawable/male"
            android:contentDescription="@string/male_img"
            android:scaleType="fitCenter"
            android:paddingEnd="6dp"
            android:paddingStart="5dp"
            android:paddingBottom="36dp"
            android:layout_gravity="center"
            android:layout_width="144dp"
            android:layout_height="144dp"/>
        <TextView
            android:textSize="20sp"
            android:text="@string/male"
            android:textColor="@color/colorOnSecondary"
            android:layout_marginStart="52dp"
            android:layout_marginEnd="57dp"
            android:layout_marginBottom="17dp"
            android:layout_marginTop="139dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/female_card"
        android:layout_width="155dp"
        android:layout_height="180dp"
        android:layout_marginStart="185dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="15dp"
        android:scaleY="1.1"
        android:scaleX="1.1"
        android:translationX="6dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:src="@drawable/female"
            android:contentDescription="@string/female_img"
            android:scaleType="fitCenter"
            android:paddingEnd="6dp"
            android:paddingStart="5dp"
            android:paddingBottom="36dp"
            android:layout_gravity="center"
            android:layout_width="144dp"
            android:layout_height="144dp"/>
        <TextView
            android:text="@string/female"
            android:textSize="20sp"
            android:textColor="@color/colorOnSecondary"
            android:layout_marginTop="139dp"
            android:layout_marginBottom="17dp"
            android:layout_marginStart="41dp"
            android:layout_marginEnd="46dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="319dp"
        android:layout_height="189dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="275dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="15dp"
        app:cardBackgroundColor="@color/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:textSize="20sp"
            android:textColor="@color/colorOnSecondary"
            android:text="@string/height"
            android:layout_marginTop="27dp"
            android:layout_marginStart="128dp"
            android:layout_marginEnd="129dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/height_number"
            android:textColor="@color/white"
            android:layout_marginTop="57dp"
            android:layout_marginEnd="111dp"
            android:layout_marginStart="113dp"
            android:layout_marginBottom="84dp"
            android:textSize="40sp"
            android:textStyle="bold"
            android:text="@string/input_height_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/white"
            android:text="@string/centimeters"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="100dp"
            android:layout_marginStart="195dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <SeekBar
            android:id="@+id/height_seekbar"
            android:max="300"
            android:progress="150"
            android:progressBackgroundTint="@color/white"
            android:progressBackgroundTintMode="screen"
            android:layout_marginBottom="64dp"
            android:layout_marginTop="125dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="25dp"
            android:layout_width="match_parent"
            android:layout_height="30dp"/>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>